<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlock">

    <LinearLayout
        style="@style/adLinVertStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/adTitleTextStyle"
                android:id="@+id/image_title"
                android:text="@string/image" />

            <Button
                android:id="@+id/selectImage"
                android:layout_margin="@dimen/smlPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"

                android:text="@string/selImage" />

            <ImageView
                android:id="@+id/imageView"
                android:src="@mipmap/ic_launcher"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/adTitleTextStyle"
                android:id="@+id/productNameTitle"
                android:text="@string/itemLabel" />

            <EditText
                style="@style/adEditTextStyle"
                android:id="@+id/productNameEdit"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/adTitleTextStyle"
                android:id="@+id/sNameTitle"
                android:text="@string/sLabel" />

            <EditText
                style="@style/adEditTextStyle"
                android:id="@+id/sNameEdit"
                android:hint="@string/hintSTitle"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/adTitleTextStyle"
                android:id="@+id/sEmailTitle"
                android:text="@string/sEmailAdd" />

            <EditText
                style="@style/adEditTextStyle"
                android:id="@+id/sEmailEdit"
                android:hint="@string/hintEmailEdit"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/adTitleTextStyle"
                android:id="@+id/price_title"
                android:text="@string/priceLabel" />

            <TextView
                android:id="@+id/pricePoundSymbol"
                style="@style/adTitleTextStyle"
                android:paddingLeft="@dimen/medPadding"
                android:text="£" />

            <EditText
                style="@style/adEditTextStyle"
                android:id="@+id/priceEdit"
                android:inputType="number"
                android:maxLength="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/adTitleHorTextStyle"
                android:id="@+id/quantitySold_title"
                android:text="@string/soldLabel" />

            <EditText
                style="@style/adTitleHorEditStyle"
                android:id="@+id/quantitySold"
                android:inputType="number"
                android:maxLength="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/adTitleHorTextStyle"
                android:id="@+id/quantity_title"
                android:text="@string/quantLabel" />

            <EditText
                style="@style/adTitleHorEditStyle"
                android:id="@+id/quantityEdit"
                android:inputType="number"
                android:maxLength="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/adBtnStyle"
                android:id="@+id/addBtn"
                android:background="@color/btnAdd"
                android:text="@string/posLabel" />
            <Button
                style="@style/adBtnStyle"
                android:id="@+id/minBtn"
                android:background="@color/btnMin"
                android:text="@string/negLabel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>