<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="4dp"
    android:background="@color/backgroundBlock"
    android:padding="4dp">

    <LinearLayout
        style="@style/liLinVertStyle">

        <TextView
            android:id="@+id/productName"
            style="@style/liTextviewStyle"
            android:text="@string/itemLabel" />

        <ImageView
            style="@style/liImageviewStyle"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/liTextviewStyle"
            android:text="@string/priceLabel" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/priceTag"
                style="@style/liTextviewPriceStyle"
                android:text="£" />

            <TextView
                android:id="@+id/price"
                style="@style/liTextviewPriceStyle"
                android:paddingLeft="@dimen/xSmlPadding"
                android:text=""
                tools:text="100" />

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/liViewStyle" />

    <LinearLayout
        style="@style/liLinVertStyle">

        <TextView
            style="@style/liTextviewStyle"
            android:text="@string/quantLabel" />

        <TextView
            style="@style/liTextInputStyle"
            android:id="@+id/quantity"
            android:text=""
            tools:text="3" />

        <TextView
            style="@style/liTextviewStyle"
            android:text="@string/soldLabel" />

        <TextView
            style="@style/liTextInputStyle"
            android:id="@+id/quantitySold"
            android:text=""
            tools:text="3" />

        <Button
            style="@style/liBtnSellStyle"
            android:id="@+id/btnSell"
            android:text="@string/sellOne"/>

        <Button
            style="@style/liBtnSellStyle"
            android:id="@+id/btnTenSell"
            android:text="@string/sellTen"/>

    </LinearLayout>

</LinearLayout>